syntax = "proto3";

package wallet;
option go_package = "pkg/pb/server/wallet";

service Wallet {
    rpc Recharge (RechargeReq) returns (RechargeResp) {}
    rpc GetUserBalance (GetUserBalanceReq) returns (GetUserBalanceResp) {}
    rpc GetTopUser (GetTopUserReq) returns (GetTopUserResp) {}
    rpc RecordOrderNoPaid (RecordOrderNoPaidReq) returns (RecordOrderNoPaidResp) {}
    rpc Pay (PayReq) returns (PayResp) {}
}

message RechargeReq {
    uint32 user_id = 1;
    int64 amount = 2;
    string account = 3;
}

message RechargeResp {
}

message GetUserBalanceReq {
    uint32 user_id = 1;
}

message GetUserBalanceResp {
    int64 balance = 1;
}

message GetTopUserReq {
    uint32 top = 1;
}

message GetTopUserResp {
    string userList = 1;
}

message RecordOrderNoPaidReq {
    uint32 userId = 1;
    string orderId = 2;
}

message RecordOrderNoPaidResp {
}

message PayReq {
    string orderId = 1;
}

message PayResp {
}